Closed Bug 1710867 Opened 5 years ago Closed 5 years ago

Voiceover induces serious memory leak

Categories

(Core :: Disability Access APIs, defect)

Firefox 88
defect

Tracking

()

RESOLVED FIXED
90 Branch
Tracking Status
firefox90 --- fixed

People

(Reporter: dwilga+bugz, Assigned: eeejay)

Details

Attachments

(3 files)

Attached file memory-reports.zip

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_14_6) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/90.0.4430.93 Safari/537.36

Steps to reproduce:

  1. Start Activity Monitor and switch to Memory mode.
  2. Start up FireFox. The last browser session is restored.
  3. Go to about:memory and record memory usage in memory-report-1.json.gz.
  4. Note FireFox's memory use in Activity Monitor.
  5. Turn on VoiceOver.
  6. Wait as VoiceOver initializes.
  7. Watch the memory use increase.
  8. Once it stops, record another memory report in memory-report-2.json.gz.
  9. Interact with the page using the Tab key to change focus. Note that memory use continues to increase.
  10. Refresh the page. Memory use increases drastically.
  11. Record memory-report-3.json.gz.
  12. Wait for memory use to stabilize. Record memory-report-4.json.gz.

Actual results:

Over the course of just a few minutes, memory use went from 500 Mb to over 40 Gb just by refreshing an already-open page. If allowed to continue, memory use increases to the point where the system starts to swap and eventually hangs completely. Using the "Minimize memory usage" button in about:memory has little effect.

The same actions, when performed without VoiceOver, cause a slight increase in memory use at first, but the increase eventually stops.

Expected results:

Memory use should not grow until the system gets bogged-down.

The Bugbug bot thinks this bug should belong to the 'Core::Disability Access APIs' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Disability Access APIs
Product: Firefox → Core

@Dan thanks for reporting! Does this happen for all websites you visit, or a particular few? I just tried my normal browsing (google, youtube, twitter, gmail, bugzilla, etc.) with VO on for about 15 minutes and I had a jump from 756 MB to 821 MB, which is in the range of my normal numbers. This might be an operating system quirk too, since I'm testing on OS 11.

Also: which version of firefox are you testing on?

Thanks!

Flags: needinfo?(bugz)

Thanks for looking into this, Morgan. After more testing, I have to admit that it's primarily with a particular page that this is happening. It's a page that is currently in development, but once it is in production next week I will post the URL for you to try.

I am using FF 88.0.1 on MacOS 10.14.6.

Flags: needinfo?(bugz)

if you load a big website

Assignee: nobody → eitan

When we return a container, like an NSArray of MOXAccessible children the container needs
to be added to the autorelease pool so that it is released and so are its members.

Also need to have MOXSearchInfo have an owning reference of mSearchKeys.

Depends on D115273

Pushed by eisaacson@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/78d4066a51a1 P1: Add returned containers to autorelease pool. r=morgan https://hg.mozilla.org/integration/autoland/rev/5d0a123846d9 P2: Don't leak MOXSearchInfo. r=morgan
Status: UNCONFIRMED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 90 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: