Bug 1710867 - P1: Add returned containers to autorelease pool. r=morgan

When we return a container, like an NSArray of MOXAccessible children the container needs
to be added to the autorelease pool so that it is released and so are its members.

Differential Revision: https://phabricator.services.mozilla.com/D115273